--- a/templates/document/index.html.twig
+++ b/templates/document/index.html.twig
@@ -10,15 +10,8 @@
             <tr>
                 <th>Id</th>
                 <th>Subject</th>
-                <th>Body</th>
-                <th>YearCreated</th>
-                <th>MonthCreated</th>
-                <th>DayCreated</th>
-                <th>DateCreated</th>
-                <th>DateModified</th>
-                <th>CreatedBy</th>
-                <th>UpdatedBy</th>
-                <th>actions</th>
+                <th>Year Created</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -26,14 +19,7 @@
             <tr>
                 <td>{{ document.id }}</td>
                 <td>{{ document.subject }}</td>
-                <td>{{ document.body }}</td>
                 <td>{{ document.yearCreated }}</td>
-                <td>{{ document.monthCreated }}</td>
-                <td>{{ document.dayCreated }}</td>
-                <td>{{ document.dateCreated ? document.dateCreated|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ document.dateModified ? document.dateModified|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ document.createdBy }}</td>
-                <td>{{ document.updatedBy }}</td>
                 <td>
                     <a href="{{ path('document_show', {'id': document.id}) }}">show</a>
                     <a href="{{ path('document_edit', {'id': document.id}) }}">edit</a>
