--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,14 +18,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Basic Search <span class="sr-only">(current)</span></a>
+                        <li class="nav-item{{ app.request.get('_route') == 'homepage' ? ' active' }}">
+                            <a class="nav-link" href="{{ url('homepage') }}">Basic Search <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Advanced Search</a>
+                        <li class="nav-item{{ app.request.get('_route') == 'advanced' ? ' active' }}">
+                            <a class="nav-link" href="{{ url('advanced') }}">Advanced Search</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Browse</a>
+                        <li class="nav-item{{ app.request.get('_route') == 'browse' ? ' active' }}">
+                            <a class="nav-link" href="{{ url('browse') }}">Browse</a>
                         </li>
                     </ul>
                 </div>
