--- a/templates/document/index.html.twig
+++ b/templates/document/index.html.twig
@@ -22,7 +22,7 @@
                 <td>{{ document.yearCreated }}</td>
                 <td>
                     <a href="{{ path('document_show', {'id': document.id}) }}">show</a>
-                    <a href="{{ path('document_edit', {'id': document.id}) }}">edit</a>
+                    {#<a href="{{ path('document_edit', {'id': document.id}) }}">edit</a>#}
                 </td>
             </tr>
         {% else %}
