--- a/templates/default/_searchExternal.html.twig
+++ b/templates/default/_searchExternal.html.twig
@@ -1,5 +1,5 @@
-<h6>External Tools</h6>
+{#<h6>External Tools</h6>
 <p>
     <a href="https://scholar.google.com.ph/scholar?q={{ search }}" class="btn btn-secondary">Google Scholars</a>
     <a href="https://www.researchgate.net/search?q={{ search }}" class="btn btn-secondary">Research Gate</a>
-</p>
+</p>#}
